Add commentAuthors to cache. Need to add heatCache